# Lab_1

./: .clang-tidy  .ginmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  static-analysis.yml
VisualTable/: VisualTable.vcxproj
VisualTable/x64/Debug/: VisualTable.assets.cache
VisualTable2/: CMakeLists.txt  Table.cpp  Table.h  Table.resx
app/: CMakeLists.txt  PolinomTable.cpp  PolinomTimer.cpp
include/: CMakeLists.txt
include/List/: THeadList.h  TList.h  TNode.h
include/Polinom/: TMonom.h  TPolinom.h
include/Stack/: stack.h
include/table/: ListHashTable.h  ListTable.h  OpenAddressingHashTable.h  TreeTable.h  alltable.h  tablearr.h  tablearrsort.h  tablerec.h
src/: CMakeLists.txt
src/List/: CMakeLists.txt  TList.cpp
src/Polinom/: CMakeLists.txt  TPolinom.cpp
src/Stack/: CMakeLists.txt  stack.cpp
src/table/: CMakeLists.txt  table.cpp
test/: CMakeLists.txt  test.cpp
test/basic/: test.cpp
test/polinom/: TestPolinom.cpp
test/stack/: StackTest.cpp
test/table/: AllTableTest.cpp  ListHashTableTest.cpp  ListTableTest.cpp  OpAddrHashTableTest.cpp  TableArrTest.cpp  TableSortArrTest.cpp  TreeTableTest.cpp
